jvm dubbo note